# Market-Regime-Detection-for-RL-Allocation

./: .gitignore  Attention_DQN_Training.ipynb  DATA_READY.md  EDA_Market_Features.ipynb  FRED_SERIES_SELECTION.md  README.md  README_HMM_BASELINE.md  environment_recognition.yml  project_context.md  pyproject.toml  run_pattern_recognition.py
configs/: rl_hyperparameters.yaml
docs/: project_architecture.tex
evaluation/: __init__.py  actions.py  backtest.py  config.py  data.py  metrics.py  policies.py  reporting.py
full_pipeline/: 01_hmm_regime_pipeline.ipynb  02_rl_dqn_with_hmm_news.ipynb  03_evaluation_backtest.ipynb  04_finetune_dqn_with_hmm_news.ipynb  05_evaluation_backtest.ipynb  06_visualize_attention_dqn.ipynb  README.md  _pipeline_utils.py
legacy/: README.md
ml/: __init__.py  explainability_plotly.py  hyperparameter_config.py  training_utils.py
notebooks_split/: 01_training_and_tuning.ipynb  02_evaluation_and_backtest.ipynb  03_explainability_and_dashboard.ipynb
pattern_recognition/: 01_prepare_data.py  01b_feature_filtering.py  02_scaling_and_pca.py  03_train_hmm.py  04_analyze_regimes.py  05_advanced_visualization.py  06_diagnostics_and_interpretability.py  README.md  split_config.py
scripts/: build_project_datasets.py  fetch_asset_news.py  fetch_fred_macro_panel.py  fetch_yahoo_seed_data.py  generate_evaluation_notebook.py  generate_full_pipeline_notebooks.py  generate_model_dataflow_docs.py  generate_proposal_figures.py  news_sentiment.py  news_sentiment_annalysis.ipynb  refresh_project_data.py  train_hmm_regimes.py  visualize_hmm_outputs.py
(+113 files in other folders)
