[project]
name = "market-regime-detection-rl"
version = "0.1.0"
description = "Market Regime Detection for RL-based Portfolio Allocation"
authors = [{name = "Portfolio Research Team"}]
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "hmmlearn>=0.3.0",
    "yfinance>=0.2.30",
    "fredapi>=0.5.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "gnews>=0.3.7",
    "newspaper3k>=0.2.8",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipython>=8.18.0",
    "ipykernel>=6.27.0",
    "nbconvert>=7.16.0",
    "stable-baselines3[extra]>=2.7.1",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.2.0",
]

dev = [
    "pytest>=7.4.0",
    "black>=23.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
